// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> renders checked 1`] = `
.bhFGJW {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 7px;
  border: 1px solid #000;
  border-radius: 4px;
  background-color: #fff;
  width: 12px;
  height: 12px;
  font-size: 12px;
}

.bhFGJW:before {
  content: "✓";
}

<span
  checked={true}
  className="sc-bdVaJa bhFGJW"
  disabled={undefined}
  size={undefined}
>
  <input
    name={undefined}
    type="hidden"
    value={true}
  />
</span>
`;

exports[`<Checkbox /> renders disabled 1`] = `
.OiyCY {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 7px;
  border: 1px solid #999;
  border-radius: 4px;
  background-color: #f3f3f3;
  width: 12px;
  height: 12px;
  font-size: 12px;
}

.OiyCY:before {
  content: "";
}

<span
  checked={undefined}
  className="sc-bdVaJa OiyCY"
  disabled={true}
  size={undefined}
>
  <input
    name={undefined}
    type="hidden"
    value={undefined}
  />
</span>
`;

exports[`<Checkbox /> renders larger 1`] = `
.kYVBFU {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 7px;
  border: 1px solid #999;
  border-radius: 4px;
  background-color: #fff;
  width: 14px;
  height: 14px;
  font-size: 14px;
}

.kYVBFU:before {
  content: "";
}

<span
  checked={undefined}
  className="sc-bdVaJa kYVBFU"
  disabled={undefined}
  size="large"
>
  <input
    name={undefined}
    type="hidden"
    value={undefined}
  />
</span>
`;

exports[`<Checkbox /> renders styled span element with hidden input 1`] = `
.cjtnSO {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 7px;
  border: 1px solid #999;
  border-radius: 4px;
  background-color: #fff;
  width: 12px;
  height: 12px;
  font-size: 12px;
}

.cjtnSO:before {
  content: "";
}

<span
  checked={undefined}
  className="sc-bdVaJa cjtnSO"
  disabled={undefined}
  size={undefined}
>
  <input
    name="test"
    type="hidden"
    value={undefined}
  />
</span>
`;
